--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -33,6 +33,7 @@
       <ui-gmap-markers models="me" coords="'coords'"
 		      idKey="'id'" icon="'icon'"
 		      ></ui-gmap-markers>
+          </ui-gmap-google-map>
 
 		      </div>
         <ion-list id="map-list1" class=" ">
