--- a/www/templates/clinic4.html
+++ b/www/templates/clinic4.html
@@ -1,18 +1,16 @@
-<ion-view title="Clinic 4" id="page3" class=" ">
+<ion-view title="Clinic 4" id="page18" style="background-color:#CAEBF2;" class=" ">
     <ion-content padding="true" class="has-header">
-        <h1 id="clinic4-heading1" style="color:#7B10B9;" class=" ">44 W Deez Nuts Street</h1>
-        <ion-list id="clinic4-list2" class=" ">
-            <ion-item class="positive  " id="clinic4-list-item13" href="tel:646-286-7794">(212) 563 8806</ion-item>
-            <ion-item class="energized  " id="clinic4-list-item12">★★★★✩</ion-item>
-            <ion-item class="item-icon-left balanced  " id="clinic4-list-item6">
+        <h1 id="clinic4-heading18" style="color:#FF3B3F;" class=" ">Lower East Side Harm Reduction Center</h1>
+        <h4 id="clinic4-heading19" style="color:#A9A9A9;" class=" ">25 Allen St New York, NY 10002 United States</h4>
+        <ion-list id="clinic4-list15" class=" ">
+            <ion-item class="royal  " id="clinic4-list-item73">Hours: Mon-Sun 7:00 AM-PM</ion-item>
+            <ion-item class="positive  " id="clinic4-list-item74" href="tel:646-286-7794">(212) 563 8806</ion-item>
+            <ion-item class="item-icon-left balanced  " id="clinic4-list-item75">
                 <i class="icon ion-checkmark"></i>Appiontment Suggested</ion-item>
-            <ion-item class="item-icon-left balanced  " id="clinic4-list-item8">
+            <ion-item class="item-icon-left balanced  " id="clinic4-list-item76">
                 <i class="icon ion-checkmark"></i>Free HIV Test</ion-item>
-            <ion-item class="item-icon-left assertive  " id="clinic4-list-item10">
-                <i class="icon ion-close"></i>Universal STD Check</ion-item>
+            <ion-item class="item-icon-left energized  " id="clinic4-list-item77" ui-sref="clinic4ExtraServices">
+                <i class="icon ion-chevron-right"></i>Other Services...</ion-item>
         </ion-list>
-        <div class="">
-            <img src="img/A2UfuenyQiuf8w0oYDMm_17-2.jpg" width="100%" height="240" style="display: block; margin-left: auto; margin-right: auto;">
-        </div>
     </ion-content>
 </ion-view>
