--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -24,7 +24,7 @@
         <div id="appName-form2" class=" button-bar "></div>
         <h1 id="testMe-heading14" style="color:#A9A9A9;text-align:center;" class=" ">Let's get started</h1>
         <div class="spacer" style="height: 100px;"></div>
-        <img src="img/app logo.png" style = "img-align:center; width:95%; height:40%">
+        <img src="img/0a95c412-c41f-4870-972a-be73122605ed.png" style = "img-align:center; width:95%; height:40%">
         <div class="spacer" style="height: 100px;"></div>
         <a ui-sref="map" id="appName-button4" style="color:#FAF7F7;" class=" button button-assertive  button-block ">Test Centers Around You</a>
     </ion-content>
