--- a/www/templates/clinicServices.html
+++ b/www/templates/clinicServices.html
@@ -1,11 +1,25 @@
-<ion-view title="Clinic Extra Services" id="page12" style="background-color:#CAEBF2;" class=" ">
+<ion-view title="Hetrick-Martin Institute" id="page12" style="background-color:#CAEBF2;" class=" ">
     <ion-content padding="true" class="has-header">
+    <div style="padding:10px;">
         <ion-list id="clinic2ExtraServices-list9" class=" ">
-            <ion-item id="clinic2ExtraServices-list-item43" class="  ">Item</ion-item>
-            <ion-item id="clinic2ExtraServices-list-item44" class="  ">Item</ion-item>
-            <ion-item id="clinic2ExtraServices-list-item45" class="  ">Item</ion-item>
-            <ion-item id="clinic2ExtraServices-list-item46" class="  ">Item</ion-item>
-            <ion-item id="clinic2ExtraServices-list-item47" class="  ">Item</ion-item>
+        	<h3 style = "text-align: center"><b>About This Clinic</b></h3>
+
+            <ion-item id="clinic2ExtraServices-list-item44" class="  "> <b>Phone:</b> 212-674-2400</ion-item>
+            <ion-item id="clinic2ExtraServices-list-item45" class="  "><b>Address:</b> 2 Astor Pl
+New York, NY 10003</ion-item>
+            <ion-item id="clinic2ExtraServices-list-item46" class="  "><b>Hours:</b> Mon-Fri 9:00am-6:00pm</ion-item>
+            
         </ion-list>
+        </div>
+        <div style = "padding: 10px;">
+        <h3 style = "text-align: center"><b> Services provided</b></h3>
+        	<ion-item id="something" style = "text-align: center">HIV testing</ion-item>
+        	<ion-item id="something" style = "text-align: center">Chlamydia testing</ion-item>
+        	<ion-item id="something" style = "text-align: center">Hepatitis B testing</ion-item>
+        	<ion-item id="something" style = "text-align: center">HPV testing</ion-item>
+        	<ion-item id="something" style = "text-align: center">Syphillis testing</ion-item>
+        </div>
     </ion-content>
+
+
 </ion-view>
